# clara-cerebellum

./: .gitignore  Cargo.toml  Dis  Dockerfile  README.md  animal_id.clp  animal_id.pl  animal_id_clara.clp  animal_id_clara.pl  city_of_dis_reception.pl  deduce_request.json  deduce_response.json  dirs.txt  first_gate  go_test.sh  install_repl.sh  murder.pl  redscare1.pl  redscare1_clara.pl  samplekb.pl  samplekb_clara.clp  samplekb_clara.pl  second_gate  stop_dis  swiclips_planning.md  swiclips_questions.md  td_test.sh  test.pl  test11.pl  test2.pl  test3.pl  test4.pl  test4_clara.clp  test4_clara.pl  test5.pl  test5.sh  test5_clara.clp  test5_clara.pl  test6.pl  test6_clara.clp  (+5 more)
caw/: Cargo.toml  README.md  REPL_QUICKSTART.md  TEST_COVERAGE_REPORT.md
caw/examples/: parse_and_eval.rs  simple.caw
caw/src/: ast.rs  caw.pest  lib.rs  parser.rs  pretty_print.rs  repl.rs  runtime.rs  tests.rs  transpiler.rs  types.rs
clara-api/: Cargo.toml
clara-api/src/: lib.rs  main.rs  server.rs
clara-api/src/handlers/: coire_handler.rs  deduce_handler.rs  devils_handler.rs  error_handler.rs  eval_handler.rs  mod.rs  ritual_handler.rs  session_handler.rs  source_handler.rs  trace_handler.rs  transduce_handler.rs
clara-api/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  tracing.rs
clara-api/src/models/: error.rs  mod.rs  request.rs  response.rs
clara-api/src/routes/: coire.rs  deduce.rs  devils.rs  eval.rs  health.rs  metrics.rs  mod.rs  ritual.rs  sessions.rs  source.rs  trace.rs  transduce.rs
clara-api/src/subprocess/: mod.rs  repl.rs
clara-api/src/validation/: input.rs
clara-api/tests/: bootstrap_auth_tests.rs  devils_api_tests.rs  startup_tests.rs
clara-baloroptik/: Cargo.toml
clara-baloroptik/src/: file_mode.rs  list_mode.rs  main.rs  render.rs  replay_mode.rs  trace_mode.rs  watch_mode.rs
clara-client/: Cargo.toml
clara-client/src/: lib.rs
clara-clips/: Cargo.toml  build.rs
clara-clips/clips-src/: readme.txt
clara-clips/clips-src/core/: ._.idea  clips  commline.c  makefile  sysdep.c  userfunctions.c
clara-clips/clp-lib/: the_coire.clp
clara-clips/src/: lib.rs
clara-clips/src/backend/: mod.rs
clara-clips/src/backend/ffi/: bindings.rs  callbacks.rs  conversion.rs  environment.rs  mod.rs
clara-clips/tests/: callback_integration_test.rs
clara-coire/: Cargo.toml
clara-coire/src/: cache_eviction.rs  carrion_picker.rs  clips_bridge.rs  coire.rs  error.rs  event.rs  lib.rs  source.rs  store.rs
clara-config/: Cargo.toml
clara-config/src/: defaults.rs  lib.rs  loader.rs  schema.rs
clara-core/: Cargo.toml
clara-core/src/: error.rs  lib.rs  traits.rs
clara-core/src/service/: eval_service.rs  load_service.rs  mod.rs  session_service.rs
clara-core/src/types/: eval_result.rs  mod.rs  resource_limits.rs  session.rs
clara-cycle/: Cargo.toml
clara-cycle/src/: controller.rs  error.rs  lib.rs  relay.rs  result.rs  session.rs  transduction.rs  transpile.rs
clara-cycle/tests/: deduce_basic_test.rs  deduce_clara_evaluate_once_test.rs  relay_filter_test.rs
clara-cycle/tests/resources/: deduce_basic_test_clara.clp  deduce_basic_test_clara.pl  deduce_clara_evaluate_once_test.pl  deduce_clara_evaluate_once_test_clara.clp  deduce_clara_evaluate_once_test_clara.pl  deduce_request.json  ritual_chanter_test.pl  ritual_chanter_test_clara.clp  ritual_chanter_test_clara.pl
clara-dagda/: Cargo.toml
clara-dagda/src/: cache.rs  error.rs  kind.rs  lib.rs  predicate.rs  truth.rs
clara-dagda/tests/: concurrent.rs
clara-frontdesk-poc/: Cargo.toml  README.md
clara-frontdesk-poc/config/: city_of_dis.toml  company.toml  localnet_dis.toml
clara-frontdesk-poc/docs/: deduction_improvement_qsector_gamma.md  front_desk_poc_update.md  front_desk_poc_update_response.md  stoke_the_coals.md  transduction_first_class.md  transduction_role_aware.md
clara-frontdesk-poc/roost/: front_desk_poc_reprise.pl  front_desk_poc_reprise_clara.clp  front_desk_poc_reprise_clara.dot  front_desk_poc_reprise_clara.pl
clara-frontdesk-poc/src/: agent.rs  config.rs  deduce.rs  main.rs  prolog_rules.pl  server.rs  session.rs  state.rs  ws.rs
clara-frontdesk-poc/static/: index.html
clara-metrics/: Cargo.toml
clara-persistence/: Cargo.toml
clara-pitsnake/: Cargo.toml  README.md
clara-pitsnake/src/: errors.rs  http_server.rs  lsp_client.rs  main.rs  schemas.rs  server.rs  tools.rs
clara-prolog/: Cargo.toml  build.rs
clara-prolog/docs/examples/: ex1.pl  ex1_clara.dot  ex1_clara.pl  ex1_request.json  ex1_response.json  ex1a.pl  ex1a_clara.clp  ex1a_clara.dot  ex1a_clara.pl  ex1a_request.json  ex1a_response.json  ex2.pl  ex2_clara.clp  ex2_clara.dot  ex2_clara.pl  ex2_request.json  ex2_response.json  go_example.sh  prepl  td  td_example.sh
clara-prolog/docs/examples/calfresh/: calfresh.pl  gemini_breakdown1.txt
clara-prolog/docs/examples/chain_of_reasoning/: chain_of_reasoning.pl
clara-prolog/docs/examples/ex1_dot/: 4db4b138_008_clips_to_prolog.dot
clara-prolog/prolog-lib/: the_coire.pl  the_rabbit.pl  the_rat.pl
clara-prolog/prolog-lib/http/: json.pl
clara-prolog/src/: error.rs  lib.rs
clara-prolog/src/backend/: mod.rs
clara-prolog/swipl-src/scripts/: build.sh
clara-prolog/tests/: prolog_integration_tests.rs
clara-ritual/: Cargo.toml
clara-ritual/src/: broker.rs  envelope.rs  error.rs  handle.rs  lib.rs  registry.rs  ritual.rs  topic.rs
clara-security/: Cargo.toml
clara-session/: Cargo.toml
clara-session/src/: eviction.rs  lib.rs  lifecycle.rs  manager.rs  metadata.rs  queue.rs  store.rs
clara-session/tests/: prolog_session_tests.rs
clara-toolbox/: Cargo.toml
clara-toolbox/src/: ffi.rs  lib.rs  manager.rs  tool.rs
clara-toolbox/src/tools/: classify.rs  echo.rs  evaluate.rs  mod.rs  splinteredmind.rs
clara-toolbox/tests/: classify_integration_test.rs
clips-mcp-adapter/: Cargo.toml  README.md  TESTING.md  mcp.json
clips-mcp-adapter/config/: clips-mcp-adapter.zed.json
clips-mcp-adapter/src/: client.rs  http_server.rs  main.rs  schemas.rs  server.rs  tools.rs
fiery-pit-client/: Cargo.toml
fiery-pit-client/src/: lib.rs
(+176 files in other folders)
