# toml
[workspace]
members = ["caw",
  "clara-api",
  "clara-clips",
  "clara-config",
  "clara-core",
  "clara-metrics",
  "clara-persistence",
  "clara-prolog",
  "clara-security",
  "clara-session",
  "clara-toolbox",
  "clips-mcp-adapter",
  "demonic-voice",
  "fiery-pit-client",
  "prolog-mcp-adapter",
  "clara-frontdesk-poc"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Workspace for Clara Cerebrum crates"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
