[package]
name = "caw"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
publish.workspace = true

[[example]]
name = "parse_and_eval"
path = "examples/parse_and_eval.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
