[package]
name = "clara-api"
version = "0.1.0"
edition = "2021"
description = "High-level Rust API for CLARA using clara-clips"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clara-clips = { path = "../clara-clips", features = ["ffi"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []