[package]
name = "clara-api"
version = "0.1.0"
edition = "2021"
description = "High-level Rust API for CLARA using clara-clips"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clara-clips = { path = "../clara-clips", features = ["ffi"] }
clara-config = { path = "../clara-config", features = ["toml"] }
clara-session = { path = "../clara-session" }
clara-core = { path = "../clara-core" }
clara-toolbox = { path = "../clara-toolbox" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
actix-web = "4.4"
actix-rt = "2.9"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.17"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []