[package]
name = "clara-baloroptik"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deduction trace visualization CLI — the eye of Balor"
publish.workspace = true

[[bin]]
name = "baloroptik"
path = "src/main.rs"

[dependencies]
clara-cycle = { path = "../clara-cycle" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["serde"] }
reqwest     = { version = "0.11", features = ["blocking", "json"] }
clap        = { version = "4", features = ["derive"] }
