[package]
name = "clara-clips"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper and build integration for CLIPS C sources"
license = "MIT OR Apache-2.0"
publish = false
build = "build.rs"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
log = "0.4"
clara-toolbox = { path = "../clara-toolbox" }

[build-dependencies]
cc = "1.0"

[features]
default = ["ffi"]
ffi = []