[package]
name = "clara-clips"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper and build integration for CLIPS C sources"
license = "MIT OR Apache-2.0"
publish = false
build = "build.rs"

[[bin]]
name = "clips-repl"
path = "src/bin/clips-repl.rs"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
clara-toolbox = { path = "../clara-toolbox", features = ["ffi"] }
clara-coire = { path = "../clara-coire", features = ["ffi"] }
demonic-voice = { path = "../demonic-voice" }
fiery-pit-client = { path = "../fiery-pit-client" }
rustyline = "15"
dirs = "6"

[build-dependencies]
cc = "1.0"

[features]
default = ["ffi"]
ffi = []