[package]
name = "clara-coire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "In-memory event mailbox for Clara's reasoning engines"
publish.workspace = true

[dependencies]
duckdb = { version = "1.2.2", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0.17"
log = "0.4"
tokio = { version = "1", features = ["rt", "time"] }
libc = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
ffi = ["libc"]
