[package]
name = "clara-config"
version = "0.1.0"
edition = "2021"
description = "Configuration utilities for Clara Cerebrum"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15.18", default-features = false, features = ["toml"] }
serde_json = "1.0"
thiserror = "2.0.17"
# Optional format parsers
toml = { version = "0.9.8", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
# default enables TOML parsing via the `toml` optional dependency
default = ["toml"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]