[package]
name = "clara-core"
version = "0.1.0"
edition = "2021"
description = "Core types, traits and database integration for Clara Cerebrum"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
log = "0.4"
anyhow = { version = "1.0", optional = true }

# Optional async runtime and SQL support (enable via features)
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
sqlx = { version = "0.8.6", default-features = false, optional = true, features = ["macros", "runtime-tokio-rustls"] }

[features]
default = []
# Base DB feature pulls in sqlx + tokio runtime
db = ["sqlx", "tokio"]
# Backend-specific convenience features
sqlite = ["sqlx/sqlite", "db"]
postgres = ["sqlx/postgres", "db"]
mysql = ["sqlx/mysql", "db"]
# Small helper feature for ergonomic error handling in examples/tests
with-anyhow = ["anyhow"]