[package]
name = "clara-cycle"
version = "0.1.0"
edition = "2021"
description = "Reasoning cycle controller for Clara Cerebrum"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clara-prolog  = { path = "../clara-prolog" }
clara-clips   = { path = "../clara-clips", features = ["ffi"] }
clara-coire   = { path = "../clara-coire" }
uuid          = { version = "1", features = ["v4"] }
thiserror     = "2"
log           = "0.4"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
