[package]
name = "clara-pitsnake"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
publish.workspace = true

[[bin]]
name = "clara-pitsnake"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.95"
axum = { version = "0.7", features = ["json"] }
tokio-stream = "0.1"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
