[package]
name = "clara-prolog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust wrapper for SWI-Prolog integration (LilDevils)"
publish.workspace = true
build = "build.rs"
links = "swipl"

[[bin]]
name = "prolog-repl"
path = "src/bin/prolog-repl.rs"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
clara-toolbox = { path = "../clara-toolbox" }
demonic-voice = { path = "../demonic-voice" }
fiery-pit-client = { path = "../fiery-pit-client" }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["ffi"]
ffi = []
