[package]
name = "clara-ritual"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ritual coordination layer — multi-evaluator messaging via Kafka"
publish.workspace = true

[dependencies]
clara-coire  = { path = "../clara-coire" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
log          = "0.4"
thiserror    = "2"
tokio        = { version = "1", features = ["sync", "rt"] }
