[package]
name = "clara-ritual"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ritual coordination layer — multi-evaluator messaging via Kafka"
publish.workspace = true

[dependencies]
clara-coire  = { path = "../clara-coire" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
log          = "0.4"
thiserror    = "2"
tokio        = { version = "1", features = ["sync", "rt"] }
chrono       = { version = "0.4", default-features = false, features = ["clock"], optional = true }
rskafka      = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Enable the real Kafka broker backend via rskafka.
# When this feature is not enabled, only InMemoryBroker is available.
rskafka = ["dep:rskafka", "dep:chrono"]
