[package]
name = "clara-toolbox"
version = "0.1.0"
edition = "2021"
description = "Tool registry and execution framework for Clara CLIPS callbacks"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
lazy_static = "1.4"
log = "0.4"
demonic-voice = { path = "../demonic-voice" }

[dev-dependencies]
env_logger = "0.11"
