[package]
name = "clips-mcp-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
publish.workspace = true

[[bin]]
name = "clips-mcp-adapter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
