[package]
name = "fiery-pit-client"
version = "0.1.0"
edition = "2021"
description = "Synchronous client for FieryPit REST API (lildaemon)"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
urlencoding = "2.1"
